vigneshkumar commited on 25/06/2019

--- a/about.html
+++ b/about.html
@@ -23,11 +23,16 @@
     <!--================ Start Header Area =================-->
     <header class="header_area">
         <div class="main_menu">
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar navbar-expand-lg navbar-light"
+                style="background-image: linear-gradient(to right, #4458dc 0%, #854fee 100%), radial-gradient(circle at top left, #4458dc, #854fee);">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
+                    <img src="img/vicky.jpg" alt="" class="avatar">
                     <a class="navbar-brand logo_h" href="index.html"
-                        style="font-weight: 600; color: #6354e5; font-size: 20px;"><img src="" alt="">VIGNESHKUMAR</a>
+                        style="font-weight: 500; color: white; font-size: 20px; margin-left: 10px;"><img src=""
+                            alt="">VIGNESH KUMAR</a>
+
+
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -105,11 +110,11 @@
                             some things I'm good at, to help ease the pain.
                         </p>
                         <p>
-                            I am a Front-End Developer, I have 1.5 years of experience providing front-end development,
+                            I am a Front-End Developer, I have 1.2 years of experience providing front-end development,
                             producing high
                             quality responsive websites and exceptional user experience.
                         </p>
-                        <a class="primary_btn" href="#"><span>Download CV</span></a>
+                        <a class="primary_btn" href="VIGNESH_KUMAR_RESUME.pdf"><span>Download CV</span></a>
                     </div>
                 </div>
             </div>
@@ -191,7 +196,7 @@
                 <div class="offset-lg-2 col-lg-4 col-md-6">
                     <div class="client-info">
                         <div class="d-flex mb-50">
-                            <span class="lage">1.5</span>
+                            <span class="lage">1.2</span>
                             <span class="smll">Years Experience Working</span>
                         </div>
                         <div class="call-now d-flex">
@@ -200,7 +205,8 @@
                             </div>
                             <div class="ml-15">
                                 <p>call us now</p>
-                                <h3>(+1)-800-555-6789</h3>
+                                <h3>(+1)-638-292-0722</h3>
+                                <h3>(+1)-994-083-1126</h3>
                             </div>
                         </div>
                     </div>
@@ -382,8 +388,7 @@
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;
                     <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-                    made <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href=""
-                        target="_blank">VigneshKumar</a>
+                    made <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="" target="_blank">VigneshKumar</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
             </div>
