--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
 	<!--================ Start Header Area =================-->
 	<header class="header_area">
 		<div class="main_menu">
-			<nav class="navbar navbar-expand-lg navbar-light">
+			<nav class="navbar navbar-expand-lg navbar-light"
+				style="background-image: linear-gradient(to right, #4458dc 0%, #854fee 100%), radial-gradient(circle at top left, #4458dc, #854fee);">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
+					<img src="img/vicky.jpg" alt="" class="avatar" href="index.html">
 					<a class="navbar-brand logo_h" href="index.html"
-						style="font-weight: 600; color: #6354e5; font-size: 20px;"><img src="" alt="">VIGNESH KUMAR</a>
+						style="font-weight: 500; color: white; font-size: 20px; margin-left: 10px;"><img src=""
+							alt="">VIGNESH KUMAR</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse"
 						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
@@ -83,7 +86,7 @@
 								applications.</p>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn" href="#"><span>Hire Me</span></a>
-								<a class="primary_btn tr-bg" href="#"><span>Get CV</span></a>
+								<a class="primary_btn tr-bg" href="VIGNESH_KUMAR_RESUME.pdf"><span>Get CV</span></a>
 							</div>
 						</div>
 					</div>
@@ -118,11 +121,11 @@
 							some things I'm good at, to help ease the pain.
 						</p>
 						<p>
-							I am a Front-End Developer, I have 1.5 years of experience providing front-end development,
+							I am a Front-End Developer, I have 1.2 years of experience providing front-end development,
 							producing high
 							quality responsive websites and exceptional user experience.
 						</p>
-						<a class="primary_btn" href="#"><span>Download CV</span></a>
+						<a class="primary_btn" href="VIGNESH_KUMAR_RESUME.pdf"><span>Download CV</span></a>
 					</div>
 				</div>
 			</div>
@@ -153,7 +156,7 @@
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="img/brands/logo3.png" alt="">
+									<img src="img/brands/logo6.png" alt="">
 								</div>
 							</div>
 						</div>
@@ -174,7 +177,7 @@
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="single-brand-item d-table">
 								<div class="d-table-cell text-center">
-									<img src="img/brands/logo6.png" alt="">
+									<img src="img/brands/logo3.png" alt="">
 								</div>
 							</div>
 						</div>
@@ -204,7 +207,7 @@
 				<div class="offset-lg-2 col-lg-4 col-md-6">
 					<div class="client-info">
 						<div class="d-flex mb-50">
-							<span class="lage">1.5</span>
+							<span class="lage">1.2</span>
 							<span class="smll">Years of Work Experience</span>
 						</div>
 						<div class="call-now d-flex">
@@ -295,6 +298,7 @@
 					<li class="active" data-filter="*">all</li>
 					<li data-filter=".popular">Web Sites</li>
 					<li data-filter=".latest"> Ionic Projects</li>
+					<li data-filter=".ups"> Upcoming Projects</li>
 					<!-- <li data-filter=".following">following</li> -->
 					<!-- <li data-filter=".upcoming">upcoming</li> -->
 				</ul>
@@ -302,23 +306,7 @@
 
 			<div class="filters-content">
 				<div class="row portfolio-grid justify-content-center">
-					<div class="col-lg-4 col-md-6 all latest">
-						<div class="portfolio_box">
-							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/model_2_bg.jpg" alt="">
-								<div class="overlay"></div>
-								<a href="img/portfolio/model_2_bg.jpg" class="img-gal">
-									<div class="icon">
-										<span class="lnr lnr-cross"></span>
-									</div>
-								</a>
-							</div>
-							<div class="short_info">
-								<h4><a href="portfolio-details.flames.html">flames</a></h4>
-								<p>My first project</p>
-							</div>
-						</div>
-					</div>
+
 					<div class="col-lg-4 col-md-6 all popular">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
@@ -333,74 +321,6 @@
 							<div class="short_info">
 								<h4><a href="portfolio-details.cva.html">CVA IT SUPPORT</a></h4>
 								<p>Web Design for IT company</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6 all latest">
-						<div class="portfolio_box">
-							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/model_1_bg.jpg" alt="">
-								<div class="overlay"></div>
-								<a href="img/portfolio/model_1_bg.jpg" class="img-gal">
-									<div class="icon">
-										<span class="lnr lnr-cross"></span>
-									</div>
-								</a>
-							</div>
-							<div class="short_info">
-								<h4><a href="portfolio-details.studio.html">izoom studio</a></h4>
-								<p>Mobile App</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6 all popular">
-						<div class="portfolio_box">
-							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/img_2.jpeg" alt="">
-								<div class="overlay"></div>
-								<a href="img/portfolio/img_2.jpeg" class="img-gal">
-									<div class="icon">
-										<span class="lnr lnr-cross"></span>
-									</div>
-								</a>
-							</div>
-							<div class="short_info">
-								<h4><a href="portfolio-details.stars.html">izoom stars</a></h4>
-								<p>Web Design for Studio</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6 all following latest">
-						<div class="portfolio_box">
-							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/model_3_bg.jpg" alt=""  style="width: 75% !important;"> 
-								<div class="overlay"></div>
-								<a href="img/portfolio/model_3_bg.jpg" class="img-gal">
-									<div class="icon">
-										<span class="lnr lnr-cross"></span>
-									</div>
-								</a>
-							</div>
-							<div class="short_info">
-								<h4><a href="portfolio-details.studio.html">izoom studio</a></h4>
-								<p>Mobile App</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6 all upcoming latest">
-						<div class="portfolio_box">
-							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/model_4_bg.jpg" alt="" style="width: 75% !important;">
-								<div class="overlay"></div>
-								<a href="img/portfolio/model_4_bg.jpg" class="img-gal">
-									<div class="icon">
-										<span class="lnr lnr-cross"></span>
-									</div>
-								</a>
-							</div>
-							<div class="short_info">
-								<h4><a href="portfolio-details.flames.html">flames</a></h4>
-								<p>Mobile App</p>
 							</div>
 						</div>
 					</div>
@@ -421,10 +341,171 @@
 							</div>
 						</div>
 					</div>
+
+					<div class="col-lg-4 col-md-6 all upcoming following ups">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/poultry.jpeg" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/poultry.jpeg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a>poultry</a></h4>
+								<p>Web Design for Farmers</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 all upcoming following ups">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/staffind.jpeg" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/staffind.jpeg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a>staffind (consultancy)</a></h4>
+								<p>Web Design for Consultancy</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 all upcoming following ups">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/beauty.jpeg" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/beauty.jpeg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a>beauty parlour</a></h4>
+								<p>Web Design for parlour</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 all popular">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/img_2.jpeg" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/img_2.jpeg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a href="portfolio-details.stars.html">izoom stars</a></h4>
+								<p>Web Design for Studio</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 all latest">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/model_1_bg.jpg" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/model_1_bg.jpg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a href="portfolio-details.studio.html">izoom studio</a></h4>
+								<p>Mobile App</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 all latest">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/model_2_bg.jpg" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/model_2_bg.jpg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a href="portfolio-details.flames.html">flames</a></h4>
+								<p>My first project</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 all latest">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/mode.jpg" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/mode.jpg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a href="portfolio-details.studio.html">izoom App</a></h4>
+								<p>My first project</p>
+							</div>
+						</div>
+					</div>
 					<div class="col-lg-4 col-md-6 all following latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/punch.png" alt="" style="width: 75% !important;">
+								<img class="img-fluid w-100" src="img/portfolio/model_3_bg.jpg" alt=""
+									style="width: 75% !important;">
+								<div class="overlay"></div>
+								<a href="img/portfolio/model_3_bg.jpg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a href="portfolio-details.studio.html">izoom studio</a></h4>
+								<p>Mobile App</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 all upcoming latest">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/model_4_bg.jpg" alt=""
+									style="width: 75% !important;">
+								<div class="overlay"></div>
+								<a href="img/portfolio/model_4_bg.jpg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a href="portfolio-details.flames.html">flames</a></h4>
+								<p>Mobile App</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 all following latest" style="">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/punch.png" alt=""
+									style="width: 75% !important;">
 								<div class="overlay"></div>
 								<a href="img/portfolio/punch.png" class="img-gal">
 									<div class="icon">
@@ -441,7 +522,8 @@
 					<div class="col-lg-4 col-md-6 all upcoming latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/punch.jpg" alt="" style="width: 75% !important;">
+								<img class="img-fluid w-100" src="img/portfolio/punch.jpg" alt=""
+									style="width: 75% !important;">
 								<div class="overlay"></div>
 								<a href="img/portfolio/punch.jpg" class="img-gal">
 									<div class="icon">
@@ -458,7 +540,8 @@
 					<div class="col-lg-4 col-md-6 all upcoming latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/stop.jpg" alt="" style="width: 75% !important;">
+								<img class="img-fluid w-100" src="img/portfolio/stop.jpg" alt=""
+									style="width: 75% !important;">
 								<div class="overlay"></div>
 								<a href="img/portfolio/stop.jpg" class="img-gal">
 									<div class="icon">
@@ -500,7 +583,7 @@
 							</div>
 							<div class="col-lg-8">
 								<div class="testi_text">
-									<h4>Elite Martin</h4>
+									<h4>Sivaraman</h4>
 									<p>"Vignesh is a highly talented designer and thinker. Vignesh can quickly
 										understand
 										what our needs are, what our audience expects and quickly speak to that. His
@@ -517,7 +600,7 @@
 							</div>
 							<div class="col-lg-8">
 								<div class="testi_text">
-									<h4>Davil Saden</h4>
+									<h4>Vignesh</h4>
 									<p>"VigneshKumar is a great guy to work with. Good spirit, competent, and more than
 										willing
 										to put to long hours in to meet our deadline --- H works with a lot of structure
@@ -534,7 +617,7 @@
 							</div>
 							<div class="col-lg-8">
 								<div class="testi_text">
-									<h4>Elite Martin</h4>
+									<h4>Anil</h4>
 									<p>"Vignesh is one of those extremely rare individuals who can both design and code
 										with equal fluency. As a user interface and user experience desiger and
 										implementer, he really does speak the 'native language of the web' with
@@ -650,8 +733,7 @@
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					Copyright &copy;
 					<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-					made  <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href=""
-						target="_blank">VigneshKumar</a>
+					made <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="" target="_blank">VigneshKumar</a>
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 				</p>
 			</div>
