--- a/contact.html
+++ b/contact.html
@@ -23,11 +23,14 @@
     <!--================ Start Header Area =================-->
     <header class="header_area">
         <div class="main_menu">
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar navbar-expand-lg navbar-light"
+                style="background-image: linear-gradient(to right, #4458dc 0%, #854fee 100%), radial-gradient(circle at top left, #4458dc, #854fee);">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
+                    <img src="img/vicky.jpg" alt="" class="avatar">
                     <a class="navbar-brand logo_h" href="index.html"
-                        style="font-weight: 600; color: #6354e5; font-size: 20px;"><img src="" alt="">VIGNESHKUMAR</a>
+                        style="font-weight: 500; color: white; font-size: 20px; margin-left: 10px;"><img src=""
+                            alt="">VIGNESH KUMAR</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -97,7 +100,8 @@
                         <div class="info_item">
                             <i class="lnr lnr-phone-handset"></i>
                             <h6><a href="#">(+91)-638-292-0722</a></h6>
-                            <p>Mon to Fri 9am to 6 pm</p>
+                            <h6><a href="#">(+91)-994-083-1126</a></h6>
+                            <p>Mon to Sat 9am to 6 pm</p>
                         </div>
                         <!-- <div class="info_item">
                             <i class="lnr lnr-envelope"></i>
