--- a/portfolio-details.flames.html
+++ b/portfolio-details.flames.html
@@ -23,11 +23,14 @@
     <!--================ Start Header Area =================-->
     <header class="header_area">
         <div class="main_menu">
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar navbar-expand-lg navbar-light"
+                style="background-image: linear-gradient(to right, #4458dc 0%, #854fee 100%), radial-gradient(circle at top left, #4458dc, #854fee);">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
+                    <img src="img/vicky.jpg" alt="" class="avatar">
                     <a class="navbar-brand logo_h" href="index.html"
-                        style="font-weight: 600; color: #6354e5; font-size: 20px;"><img src="" alt="">VIGNESHKUMAR</a>
+                        style="font-weight: 500; color: white; font-size: 20px; margin-left: 10px;"><img src=""
+                            alt="">VIGNESH KUMAR</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -93,7 +96,8 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="left_img">
-                            <img class="img-fluid" src="img/portfolio/model_2_bg.jpg" alt="" style="max-width: 85%; margin-left: 25%;">
+                            <img class="img-fluid" src="img/portfolio/model_2_bg.jpg" alt=""
+                                style="max-width: 85%; margin-left: 25%;">
                         </div>
                     </div>
                     <div class="offset-lg-1 col-lg-5">
@@ -117,15 +121,17 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="left_img">
-                            <img class="img-fluid" src="img/portfolio/model_4_bg.jpg" alt="" style="max-width: 50%; margin-left: 45%;">
+                            <img class="img-fluid" src="img/portfolio/model_4_bg.jpg" alt=""
+                                style="max-width: 50%; margin-left: 45%;">
                         </div>
                     </div>
                     <div class="offset-lg-1 col-lg-5">
                         <div class="portfolio_right_text mt-30">
                             <!-- <h4 class="text-uppercase">minimal interior design</h4> -->
                             <p>
-                                An Mobile Application creating for the user to identify an strength of their relationship. 
-                                <br> 
+                                An Mobile Application creating for the user to identify an strength of their
+                                relationship.
+                                <br>
                             </p>
                             <!-- <ul class="list">
                                 <li><span>Rating</span>: <i class="fa fa-star"></i><i class="fa fa-star"></i><i
