--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,14 @@
 	<!--================ Start Header Area =================-->
 	<header class="header_area">
 		<div class="main_menu">
-			<nav class="navbar navbar-expand-lg navbar-light">
+			<nav class="navbar navbar-expand-lg navbar-light"
+				style="background-image: linear-gradient(to right, #4458dc 0%, #854fee 100%), radial-gradient(circle at top left, #4458dc, #854fee);">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html" style="font-weight: 600; color: #6354e5; font-size: 20px;"><img src="" alt="">VIGNESHKUMAR</a>
+					<img src="img/vicky.jpg" alt="" class="avatar">
+					<a class="navbar-brand logo_h" href="index.html"
+						style="font-weight: 500; color: white; font-size: 20px; margin-left: 10px;"><img src=""
+							alt="">VIGNESH KUMAR</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse"
 						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
@@ -340,8 +344,7 @@
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					Copyright &copy;
 					<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-					made  <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href=""
-						target="_blank">VigneshKumar</a>
+					made <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="" target="_blank">VigneshKumar</a>
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 				</p>
 			</div>
