vickys last commit on 25/06/2019 4:52pm

--- a/portfolio.html
+++ b/portfolio.html
@@ -104,6 +104,7 @@
 					<li class="active" data-filter="*">all</li>
 					<li data-filter=".popular">Web Sites</li>
 					<li data-filter=".latest"> Ionic Projects</li>
+					<li data-filter=".ups"> Upcoming Projects</li>
 					<!-- <li data-filter=".following">following</li> -->
 					<!-- <li data-filter=".upcoming">upcoming</li> -->
 				</ul>
@@ -111,23 +112,7 @@
 
 			<div class="filters-content">
 				<div class="row portfolio-grid justify-content-center">
-					<div class="col-lg-4 col-md-6 all latest">
-						<div class="portfolio_box">
-							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/model_2_bg.jpg" alt="">
-								<div class="overlay"></div>
-								<a href="img/portfolio/model_2_bg.jpg" class="img-gal">
-									<div class="icon">
-										<span class="lnr lnr-cross"></span>
-									</div>
-								</a>
-							</div>
-							<div class="short_info">
-								<h4><a href="portfolio-details.flames.html">flames</a></h4>
-								<p>My first project</p>
-							</div>
-						</div>
-					</div>
+
 					<div class="col-lg-4 col-md-6 all popular">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
@@ -142,6 +127,95 @@
 							<div class="short_info">
 								<h4><a href="portfolio-details.cva.html">CVA IT SUPPORT</a></h4>
 								<p>Web Design for IT company</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 all upcoming following popular">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/img_0_large.jpeg" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/img_0_large.jpeg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a href="portfolio-details.nuaghtea.html">naugh tea</a></h4>
+								<p>Web Design for Shop</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 all upcoming following ups">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/poultry.jpeg" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/poultry.jpeg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a>poultry</a></h4>
+								<p>Web Design for Farmers</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 all upcoming following ups">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/staffind.jpeg" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/staffind.jpeg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a>staffind (consultancy)</a></h4>
+								<p>Web Design for Consultancy</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 all upcoming following ups">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/beauty.jpeg" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/beauty.jpeg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a>beauty parlour</a></h4>
+								<p>Web Design for parlour</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 all popular">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/img_2.jpeg" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/img_2.jpeg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a href="portfolio-details.stars.html">izoom stars</a></h4>
+								<p>Web Design for Studio</p>
 							</div>
 						</div>
 					</div>
@@ -162,27 +236,45 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6 all popular">
+					<div class="col-lg-4 col-md-6 all latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/img_2.jpeg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/model_2_bg.jpg" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/img_2.jpeg" class="img-gal">
+								<a href="img/portfolio/model_2_bg.jpg" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.stars.html">izoom stars</a></h4>
-								<p>Web Design for Studio</p>
+								<h4><a href="portfolio-details.flames.html">flames</a></h4>
+								<p>My first project</p>
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6 all following">
+					<div class="col-lg-4 col-md-6 all latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/model_3_bg.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/mode.jpg" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/mode.jpg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a href="portfolio-details.studio.html">izoom App</a></h4>
+								<p>My first project</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 all following latest">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/model_3_bg.jpg" alt=""
+									style="width: 75% !important;">
 								<div class="overlay"></div>
 								<a href="img/portfolio/model_3_bg.jpg" class="img-gal">
 									<div class="icon">
@@ -196,10 +288,11 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6 all upcoming">
+					<div class="col-lg-4 col-md-6 all upcoming latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/model_4_bg.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/model_4_bg.jpg" alt=""
+									style="width: 75% !important;">
 								<div class="overlay"></div>
 								<a href="img/portfolio/model_4_bg.jpg" class="img-gal">
 									<div class="icon">
@@ -213,27 +306,12 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6 all upcoming following">
+
+					<div class="col-lg-4 col-md-6 all following latest" style="">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/img_0_large.jpeg" alt="">
-								<div class="overlay"></div>
-								<a href="img/portfolio/img_0_large.jpeg" class="img-gal">
-									<div class="icon">
-										<span class="lnr lnr-cross"></span>
-									</div>
-								</a>
-							</div>
-							<div class="short_info">
-								<h4><a href="portfolio-details.nuaghtea.html">naugh tea</a></h4>
-								<p>Web Design for Shop</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6 all following">
-						<div class="portfolio_box">
-							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/punch.png" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/punch.png" alt=""
+									style="width: 75% !important;">
 								<div class="overlay"></div>
 								<a href="img/portfolio/punch.png" class="img-gal">
 									<div class="icon">
@@ -247,10 +325,11 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6 all upcoming">
+					<div class="col-lg-4 col-md-6 all upcoming latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/punch.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/punch.jpg" alt=""
+									style="width: 75% !important;">
 								<div class="overlay"></div>
 								<a href="img/portfolio/punch.jpg" class="img-gal">
 									<div class="icon">
@@ -264,10 +343,11 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6 all upcoming">
+					<div class="col-lg-4 col-md-6 all upcoming latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/stop.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/stop.jpg" alt=""
+									style="width: 75% !important;">
 								<div class="overlay"></div>
 								<a href="img/portfolio/stop.jpg" class="img-gal">
 									<div class="icon">
