--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							<p style="margin-top: -5%; font-size: 16px;">I design, build & sometimes rescue
 								applications.</p>
 							<div class="d-flex align-items-center">
-								<a class="primary_btn" href="#"><span>Hire Me</span></a>
+								<a class="primary_btn" href="vickypandi12@gmail.com"><span>Hire Me</span></a>
 								<a class="primary_btn tr-bg" href="VIGNESH_KUMAR_RESUME.pdf"><span>Get CV</span></a>
 							</div>
 						</div>
