--- a/services.html
+++ b/services.html
@@ -164,7 +164,7 @@
                             </div>
                             <div class="col-lg-8">
                                 <div class="testi_text">
-                                    <h4>Elite Martin</h4>
+                                    <h4>sivaraman</h4>
                                     <p>"Vignesh is a highly talented designer and thinker. Vignesh can quickly
                                         understand
                                         what our needs are, what our audience expects and quickly speak to that. His
@@ -181,7 +181,7 @@
                             </div>
                             <div class="col-lg-8">
                                 <div class="testi_text">
-                                    <h4>Davil Saden</h4>
+                                    <h4>vignesh</h4>
                                     <p>"VigneshKumar is a great guy to work with. Good spirit, competent, and more than
                                         willing
                                         to put to long hours in to meet our deadline --- H works with a lot of structure
@@ -198,7 +198,7 @@
                             </div>
                             <div class="col-lg-8">
                                 <div class="testi_text">
-                                    <h4>Elite Martin</h4>
+                                    <h4>anil</h4>
                                     <p>"Vignesh is one of those extremely rare individuals who can both design and code
                                         with equal fluency. As a user interface and user experience desiger and
                                         implementer, he really does speak the 'native language of the web' with
