vicky pushed on 28/06/2019 5:38pm

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                     <img src="img/vicky.jpg" alt="" class="avatar">
                     <a class="navbar-brand logo_h" href="index.html"
                         style="font-weight: 500; color: white; font-size: 20px; margin-left: 10px;"><img src=""
-                            alt="">VIGNESH KUMAR</a>
+                            alt="">VIGNESHKUMAR</a>
 
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -145,7 +145,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-6">
                             <div class="single-brand-item d-table">
                                 <div class="d-table-cell text-center">
-                                    <img src="img/brands/logo3.png" alt="">
+                                    <img src="img/brands/logo6.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-6">
                             <div class="single-brand-item d-table">
                                 <div class="d-table-cell text-center">
-                                    <img src="img/brands/logo6.png" alt="">
+                                    <img src="img/brands/logo3.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -375,10 +375,9 @@
                             <h4>Follow Me</h4>
                         </div>
                         <div class="footer_social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
+                            <a href="https://www.facebook.com/vignesh.k.kavitha"><i class="fa fa-facebook"></i></a>
+                            <a href="https://twitter.com/vickypandi12"><i class="fa fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/vky_dood/tagged/?hl=en"><i class="fa fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
