commited by vicky on 05/07/2019

--- a/index.html
+++ b/index.html
@@ -537,6 +537,24 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-lg-4 col-md-6 all upcoming ups">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/food.PNG" alt=""
+									style="width: 75% !important;">
+								<div class="overlay"></div>
+								<a href="img/portfolio/food.PNG" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a href="portfolio-details.food.html">food delivery</a></h4>
+								<p>Mobile App</p>
+							</div>
+						</div>
+					</div>
 					<div class="col-lg-4 col-md-6 all upcoming latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
@@ -721,8 +739,9 @@
 						</div>
 						<div class="footer_social">
 							<a href="https://www.facebook.com/vignesh.k.kavitha"><i class="fa fa-facebook"></i></a>
-                            <a href="https://twitter.com/vickypandi12"><i class="fa fa-twitter"></i></a>
-                            <a href="https://www.instagram.com/vky_dood/tagged/?hl=en"><i class="fa fa-instagram"></i></a>
+							<a href="https://twitter.com/vickypandi12"><i class="fa fa-twitter"></i></a>
+							<a href="https://www.instagram.com/vky_dood/tagged/?hl=en"><i
+									class="fa fa-instagram"></i></a>
 						</div>
 					</div>
 				</div>
